--- a/main.css
+++ b/main.css
@@ -7,6 +7,7 @@ body {
     'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 2;
   background: #ffc600;
+  background-image: url(./assets/topography.svg);
 }
 
 .wrapper {
@@ -23,8 +24,10 @@ button {
   background: #ff0060;
   color: white;
   font-size: 1rem;
+  font-weight: bolder;
   padding: 20px;
-  transition: all 0.2s;
+  transition: all 250ms;
+  border: none;
 }
 
 button[disabled] {
