--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
 body {
+  padding: 0;
+  margin: 0;
   min-height: 100vh;
   display: grid;
   justify-content: center;
@@ -6,8 +8,18 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 2;
-  background: #ffc600;
   background-image: url(./assets/topography.svg);
+}
+
+body::before {
+  background: linear-gradient(rgb(109, 88, 247) 0%, rgb(214, 56, 217) 100%);
+  display: block;
+  content: '';
+  height: 100%;
+  opacity: 0.93;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
 
 .wrapper {
@@ -18,13 +30,14 @@ body {
   background: white;
   display: grid;
   grid-template-rows: 1fr auto;
+  z-index: 2;
 }
 
 button {
   background: #ff0060;
   color: white;
   font-size: 1rem;
-  font-weight: bolder;
+  font-weight: ;
   padding: 20px;
   transition: all 250ms;
   border: none;
